// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmountFormat Big value 1`] = `
<span
  className="test_class"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "1&nbsp;234&nbsp;567&nbsp;890.00",
      }
    }
  />
   
  <span
    className="cur ruble"
  >
    <span>
      р.
    </span>
  </span>
</span>
`;

exports[`AmountFormat ClassName 1`] = `
<span
  className="test_class"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "123&nbsp;456.00",
      }
    }
  />
   
  <span
    className="cur ruble"
  >
    <span>
      р.
    </span>
  </span>
</span>
`;

exports[`AmountFormat Currency EUR 1`] = `
<span
  className="test_class"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "1&nbsp;234&nbsp;567&nbsp;890.00",
      }
    }
  />
   
  <span
    className="cur euro"
  >
    <span>
      €
    </span>
  </span>
</span>
`;

exports[`AmountFormat Currency RUR 1`] = `
<span
  className="test_class"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "1&nbsp;234&nbsp;567&nbsp;890.00",
      }
    }
  />
   
  <span
    className="cur ruble"
  >
    <span>
      р.
    </span>
  </span>
</span>
`;

exports[`AmountFormat Currency USD 1`] = `
<span
  className="test_class"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "1&nbsp;234&nbsp;567&nbsp;890.00",
      }
    }
  />
   
  <span
    className="cur dollar"
  >
    <span>
      $
    </span>
  </span>
</span>
`;

exports[`AmountFormat Default props 1`] = `
<span
  className=""
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "123&nbsp;456.00",
      }
    }
  />
   
  <span
    className="cur ruble"
  >
    <span>
      р.
    </span>
  </span>
</span>
`;

exports[`AmountFormat Default value 1`] = `
<span
  className=""
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "123&nbsp;456.00",
      }
    }
  />
   
  <span
    className="cur ruble"
  >
    <span>
      р.
    </span>
  </span>
</span>
`;

exports[`AmountFormat First zero 1`] = `
<span
  className="test_class"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "123.00",
      }
    }
  />
   
  <span
    className="cur ruble"
  >
    <span>
      р.
    </span>
  </span>
</span>
`;

exports[`AmountFormat Null currency 1`] = `
<span
  className="test_class"
>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "123.00",
      }
    }
  />
   
</span>
`;

exports[`AmountFormat Null value 1`] = `
<span
  className="test_class"
>
  not date
</span>
`;
